--- a/Jupiter/Gemfile
+++ b/Jupiter/Gemfile
@@ -29,6 +29,9 @@ gem 'jquery-rails'
 
 gem 'bootstrap-sass'
 
+gem 'will_paginate'
+gem 'lazy_high_charts'
+
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
 
